# C-SDL2-Cmake-easy-start

./: .gitignore  CMakeLists.txt  README.md
commandline-app/: CMakeLists.txt
commandline-app/src/: main.cpp
include/: logger.h
src/: logger.cpp  main.cpp
